--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,15 @@ h2 {
 .logo_footer svg {
   width: 72px;
   height: 72px;
+  margin-right: 20px !important;
+}
+
+.logo_footer .logo__upper {
+  font-size: 31px;
+}
+
+.logo_footer .logo__name {
+  font-size: 22px;
 }
 
 .logo__name {
@@ -360,15 +369,23 @@ h2 {
 }
 
 .header {
-  background-color: rgba(240, 240, 240, 0.9);
+  background-color: #F0F0F0;
   border-bottom: 10px solid #3ea3f2;
-  height: 80px;
+  height: 118px;
   position: relative;
   z-index: 5;
 }
 
-.header .wrapper {
-  height: 100%;
+.header__outer {
+  background-color: white;
+}
+
+.header .wrapper:first-child {
+  height: 38px;
+}
+
+.header .wrapper:nth-child(2) {
+  height: calc(100% - 38px);
 }
 
 .header__inner {
@@ -392,17 +409,13 @@ h2 {
 
 .header__nav {
   height: 100%;
-  width: 420px;
-  margin-right: 50px;
+  margin-right: 35px;
 }
 
 .header__nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 
 .header__nav ul,
@@ -421,10 +434,10 @@ h2 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 0px 15px;
 }
 
 .header__langcontainer {
-  font-family: Raleway;
   font-size: 18px;
   font-weight: 700;
   cursor: pointer;
@@ -432,6 +445,10 @@ h2 {
   -webkit-transition: .15s ease;
   -o-transition: .15s ease;
   transition: .15s ease;
+}
+
+.header__langcontainer * {
+  font-family: Raleway;
 }
 
 .header__langcontainer:hover {
@@ -485,11 +502,12 @@ h2 {
 .header__langselect {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  width: 90px;
+  width: 97px;
   border-radius: 5px;
   position: relative;
   display: inline-block;
-  padding: 12px;
+  padding: 15px;
+  padding-bottom: 10px;
   -webkit-transition: 0.3s ease;
   -o-transition: 0.3s ease;
   transition: 0.3s ease;
@@ -504,14 +522,16 @@ h2 {
   max-height: 0;
   position: absolute;
   top: 100%;
+  padding-bottom: 6px;
   left: 0;
 }
 
 .header__langlist li {
-  padding: 12px;
+  padding: 6px 15px;
 }
 
 .header__langlist li a {
+  font-weight: 400;
   -webkit-transition: 0.15s ease;
   -o-transition: 0.15s ease;
   transition: 0.15s ease;
@@ -525,6 +545,7 @@ h2 {
 
 .header__langlist li a:hover {
   color: #3ea3f2;
+  font-weight: 700;
 }
 
 .header__langlist li a:hover svg {
@@ -634,57 +655,11 @@ h2 {
   font-size: 18px;
 }
 
-.breadcrumbs {
-  padding-top: 10px;
-}
-
-.breadcrumbs ul {
-  margin: 0 auto;
-  width: 97%;
-  height: 60px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom: 1px solid rgba(196, 196, 196, 0.5);
-}
-
-.breadcrumbs ul li:first-child {
-  margin-left: 1vw;
-}
-
-.breadcrumbs ul li:not(:last-child) {
-  padding-right: 7px;
-}
-
-.breadcrumbs ul li:not(:last-child) a {
-  opacity: 0.4;
-}
-
-.breadcrumbs ul li svg {
-  max-width: 9px;
-  max-height: 9px;
-  padding-right: 7px;
-}
-
-.breadcrumbs ul li a {
-  font-size: 14px;
-  color: #3e3f43;
-}
-
 .wrapper {
   width: 74%;
   max-width: 1420px;
   margin: 0 auto;
   min-width: 1050px;
-}
-
-.breadcrumbs {
-  background-color: #f8f8f8;
 }
 
 main {
@@ -761,6 +736,7 @@ main .abs-container {
 }
 
 .blog__wrapper {
+  margin-top: 80px;
   padding-top: 70px;
   position: relative;
   z-index: 1;
@@ -1565,6 +1541,16 @@ body {
     margin-left: auto;
   }
 
+  .header__nav a {
+    -webkit-transition: .3s ease-out;
+    -o-transition: .3s ease-out;
+    transition: .3s ease-out;
+  }
+
+  .header__nav a:hover {
+    background-color: white;
+  }
+
   .burger {
     display: none;
   }
@@ -1588,9 +1574,9 @@ body {
   }
 }
 
-@media screen and (max-width: 1600px) {
-  .breadcrumbs ul {
-    width: 98.5%;
+@media screen and (max-width: 1440px) {
+  .header .wrapper:nth-child(2) {
+    height: calc(100% - 28.5px);
   }
 }
 
@@ -1814,6 +1800,10 @@ body {
     -webkit-transition-delay: 0.3s;
          -o-transition-delay: 0.3s;
             transition-delay: 0.3s;
+  }
+
+  .header__nav a {
+    font-size: 18px;
   }
 
   .header__nav {
@@ -2095,6 +2085,14 @@ body {
     width: calc(54px + (100vw - 1440px) * (0.0375));
   }
 
+  .logo_footer .logo__upper {
+    font-size: calc(23.25px + (100vw - 1440px) * (0.01615));
+  }
+
+  .logo_footer .logo__name {
+    font-size: calc(16.5px + (100vw - 1440px) * (0.01146));
+  }
+
   .logo__name {
     font-size: calc(10.5px + (100vw - 1440px) * (0.00729));
   }
@@ -2136,27 +2134,11 @@ body {
   }
 
   .header {
-    height: calc(60px + (100vw - 1440px) * (0.04167));
+    height: calc(88.5px + (100vw - 1440px) * (0.06146));
   }
 
-  .breadcrumbs ul {
-    height: calc(45px + (100vw - 1440px) * (0.03125));
-  }
-
-  .breadcrumbs ul li svg {
-    max-width: calc(6.75px + (100vw - 1440px) * (0.00469));
-  }
-
-  .breadcrumbs ul li svg {
-    max-height: calc(6.75px + (100vw - 1440px) * (0.00469));
-  }
-
-  .breadcrumbs ul li svg {
-    padding-right: calc(5.25px + (100vw - 1440px) * (0.00365));
-  }
-
-  .breadcrumbs ul li a {
-    font-size: calc(10.5px + (100vw - 1440px) * (0.00729));
+  .header .wrapper:first-child {
+    height: calc(28.5px + (100vw - 1440px) * (0.01979));
   }
 
   .card__image {
@@ -2209,6 +2191,10 @@ body {
 
   .card__date {
     padding-right: calc(18.75px + (100vw - 1440px) * (0.01302));
+  }
+
+  .blog__wrapper {
+    margin-top: calc(60px + (100vw - 1440px) * (0.04167));
   }
 
   .blog__wrapper {
@@ -2533,6 +2519,10 @@ body {
     height: 231.75px;
   }
 
+  .blog__wrapper {
+    margin-top: 60px;
+  }
+
   .blog__bgtext {
     font-size: 110.25px;
   }
@@ -2720,6 +2710,10 @@ body {
   }
 
   .blog__wrapper {
+    margin-top: calc(10px + (100vw - 320px) * (0.02232));
+  }
+
+  .blog__wrapper {
     padding-top: calc(25px + (100vw - 320px) * (0.02232));
   }
 
@@ -2829,6 +2823,14 @@ body {
     width: 54px;
   }
 
+  .logo_footer .logo__upper {
+    font-size: 23.25px;
+  }
+
+  .logo_footer .logo__name {
+    font-size: 16.5px;
+  }
+
   .logo__name {
     font-size: 10.5px;
   }
@@ -2866,27 +2868,11 @@ body {
   }
 
   .header {
-    height: 60px;
+    height: 88.5px;
   }
 
-  .breadcrumbs ul {
-    height: 45px;
-  }
-
-  .breadcrumbs ul li svg {
-    max-width: 6.75px;
-  }
-
-  .breadcrumbs ul li svg {
-    max-height: 6.75px;
-  }
-
-  .breadcrumbs ul li svg {
-    padding-right: 5.25px;
-  }
-
-  .breadcrumbs ul li a {
-    font-size: 10.5px;
+  .header .wrapper:first-child {
+    height: 28.5px;
   }
 
   .card__title {
@@ -3101,6 +3087,22 @@ body {
 @media screen and (min-width: 0px) and (max-width: 999px) {
   .headline__recall {
     margin-left: 20px;
+  }
+}
+
+@media screen and (min-width: 1440px) and (max-width: 1920px) {
+  .header .wrapper:nth-child(2) {
+    height: calc(100% - (28.5px + (100vw - 1440px) * (0.01979)));
+  }
+}
+
+@media screen and (max-width: 1000px) and (min-width: 769px) {
+  .header__nav {
+    margin-right: calc(10px + (100vw - 769px) * (0.10823));
+  }
+
+  .header__nav a {
+    font-size: calc(18px + (100vw - 769px) * (0.00866));
   }
 }
 
